# LLM_Challenge

./: README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
backend/data/metadata/: 07fb175946e7.json  07fb175946e7_chunks.jsonl  29f91a9e4e0a.json  29f91a9e4e0a_chunks.jsonl  345c7f5869d7.json  345c7f5869d7_chunks.jsonl  35f64b6fe7d6.json  35f64b6fe7d6_chunks.jsonl  50e97e9bad36.json  50e97e9bad36_chunks.jsonl  74f7eb6cb0e2.json  74f7eb6cb0e2_chunks.jsonl  899aa469addb.json  899aa469addb_chunks.jsonl  d216e8360d7b.json  d216e8360d7b_chunks.jsonl  defd579186e4.json  defd579186e4_chunks.jsonl
backend/data/uploads/: ml_benefits.txt  multi_doc_synthesis.docx  rag_sample.txt
backend/data/vectorstore/3ec9c53f-57b9-414b-af55-3cdd647528a9/: index_metadata.pickle
backend/docs/: architecture.dot  architecture.md  evaluation_plan.md  implementation_guide.md  prometheus.yml  solution_overview.md
backend/src/: __init__.py
backend/src/app/: __init__.py  cli.py  config.py  embeddings.py  evaluation.py  graph.py  ingestion.py  llm.py  models.py  observability.py  retrieval.py  server.py
backend/src/intelligent_doc_qa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/tests/: test_ingestion.py  test_retrieval.py
frontend/: .env.example  Dockerfile  README.md  pyproject.toml
frontend/app/: main.py
frontend/frontend.egg-info/: PKG-INFO  SOURCES.txt
sample_data/: climate_change.docx  climate_change.txt  project_brief.txt  renewable_reliability.docx  renewable_reliability.txt
